[gd_scene format=3 uid="uid://gameover001tscn"]

[ext_resource type="Script" path="res://scripts/ui/GameOver.gd" id="1_gameover"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_gameover")

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -175.0
offset_right = 175.0
offset_bottom = 175.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
text = "Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="Panel/VBoxContainer"]
text = "Best: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
text = "Play Again"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
text = "Quit"
